Fix margins and paddings of the whole page
Page was not responsive to stretching, now it is.

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 body {
     height: 100vh;
     margin: 0;
+    padding: 0;
     overflow: hidden;
     font-family: Roboto, sans-serif;
     display: flex;
@@ -15,9 +16,9 @@ body {
     display: flex;
     flex-direction: column;
     background-color: #1F2937;
-    padding: 32px 320px;
-    gap: 32px;
+    padding: 32px 32px;
     flex-wrap: wrap;
+    align-items: center;
 }
 
 .box1 > * {
@@ -26,17 +27,22 @@ body {
 
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content:space-between;
+    margin-left: 12px;
+    margin-right: 12px;
 }
 
 .container {
     display: flex;
-    gap: 30px;
+    gap: 22px;
 }
 .preview-container {
+    max-width: 1200px;
     display: flex;
-    gap: 180px;
     align-items: center;
+    justify-content: space-between;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .textpart {
@@ -64,6 +70,7 @@ button {
     height: auto;
     border-radius: 15%;
     border: 3px dotted #3882F6;
+    padding: 3px;
 }
 
 a, .small-preview {
@@ -107,6 +114,8 @@ a:hover {
 .panel {
     display: flex;
     gap: 54px;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .panelitem {
@@ -131,25 +140,28 @@ a:hover {
     flex-direction: column;
     background-color: #E5E7EB;
     gap: 1rem;
+    margin-top: 32px;
+    margin-bottom: 32px;
 }
 
 .quote, .signature {
     font-style: italic;
     color: #1F2937;
-    margin-left: auto;
-    margin-right: auto;
-    width:900px;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
 .quote {
     font-size: 36px;
     margin-top: 48px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 900px;
 }
 
 .signature {
     font-size: 24px;
     font-weight: 700;
-    margin-bottom: 48px;
     display: flex;
     justify-content: flex-end;
 }
